<resources>
    <string name="app_name">Market</string>
    <string name="login_title">Login</string>
    <string name="no_account_question">Not registered yet?</string>
    <string name="register_now_prompt"><u>Register now</u></string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="login_button">Login</string>
    <string name="register_title">Register</string>
    <string name="email_label">Email</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="register_button">Register</string>
    <string name="login_success_message">Successfully logged in</string>
    <string name="register_success_message">Registered successfully</string>
    <string name="already_registered_label">Already have an account.</string>
    <string name="login_prompt"><u>Login now</u></string>
    <string name="login_fail_message">The username or password does not match any user</string>
    <string name="register_fail_message">Registration failed</string>
    <string name="password_missmatch_message">Passwords do not match</string>
    <string name="home_tab_title">Home</string>
    <string name="items_tab_title">Products</string>
    <string name="profile_tab_title">Profile</string>
    <string name="send_message_button">Send message</string>
    <string name="prod_title_title">Title</string>
    <string name="prod_price_title">Price</string>
    <string name="prod_description_title">Description</string>
    <string name="description_prompt">Write something about the product you\'re selling...</string>
    <string name="prod_category_title">Category</string>
    <string name="upload_image_title">Upload photos</string>
    <string name="publish_button">Publish</string>
    <string name="profile_option">Profile</string>
    <string name="messages_option">Messages</string>
    <string name="logout_option">Logout</string>
    <string name="delete_account_option">Delete Account</string>
    <string name="confirm_deletion_message">This action cannot be undone.</string>
    <string name="confirm_deletion_title">Delete Profile?</string>
    <string name="delete_button">Delete</string>
    <string name="cancel_button">Cancel</string>
    <string name="successfull_deletion_message">Acount deleted successfuly</string>
    <string name="more_options_delete">Delete</string>
    <string name="more_options_details">Details</string>
    <string name="more_options_messages">See messages</string>
    <string name="more_options_report">Report product</string>
    <string name="more_button_label">more</string>
    <string name="less_button_label">less</string>
    <string name="or_more">or more</string>
    <string name="or_less">or less</string>
    <string name="toolbar_home_title">Search Products</string>
    <string name="toolbar_items_title">My listings</string>
    <string name="toolbar_create_title">Publish Product Listing</string>
    <string name="toolbar_profile_title">Personal Account</string>
    <string name="confirm_deletion_product_title">Delete Product Listing</string>
    <string name="confirm_deletion_product_message">This action cannot be undone.</string>
    <string name="successfull_deletion_product_message">Product deleted successfully</string>
    <string name="profile_details_title">Profile</string>
    <string name="location_label">City Location</string>
    <string name="empty_product_info_warning">The title, description and price of the product must be filled out</string>
    <string name="price_invalid_warning">The price is invalid</string>
    <string name="update_location_button">Update</string>
    <string name="location_undefined">Unknown</string>
    <string name="write_message_prompt">Write something nice...</string>
    <string name="more_options_send_message">Message Owner</string>
    <string name="msg_notify_name">New message received from another user</string>
    <string name="msg_notify_description">Notify when another user sends a message</string>
    <string name="location_unknow_product">Location Unknown</string>
    <string name="any_price">Any Price</string>
    <string name="cannot_upload_more_photos">Cannot upload more photos (max is 5)</string>
    <string name="reports">Reports</string>
    <string name="delete_product">Delete product</string>
    <string name="reason_label">reason</string>
    <string name="details_label">details</string>
    <string name="clear_reports">Clear reports</string>
    <string name="search_for_product_hint">Search for a product</string>
    <string name="search_for_contacts">Search for someone</string>
    <string name="loading_location">Loading location...</string>
    <string name="error_location">Location unavailable</string>
    <string name="loading">Loading</string>
    <string name="no_products">No products were found :(</string>
    <string name="no_products_admin">No reported products were found :(</string>
    <string name="no_chats">No messages were found</string>
    <string name="reason_fraud">Fraud</string>
    <string name="reason_illegal">Illegal activity</string>
    <string name="reason_racism">Racism, sexism, homophobia or other discrimination</string>
    <string name="reason_hate_speech">Hate Speech</string>
    <string name="reason_missinformation">Missinformation</string>
    <string name="reason_disrespectful">Disrespectful, Uncivil, unkind or violation of someone\'s privacy</string>
    <string name="reason_other">Others</string>
    <string name="write_explain_prompt">Include details if needed</string>
    <string name="report_success_message">Report sent</string>
    <string name="reason_required">Select one of the reasons listed</string>
    <string name="leave_a_review">Leave a star rating!</string>
    <string name="reported_items">Reported</string>
</resources>