<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ui.fragments.CreateProductFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prod_title_title"
            android:textColor="@color/title_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"></LinearLayout>

        <TextView
            android:id="@+id/price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prod_price_title"
            android:textAlignment="textEnd"
            android:textColor="@color/title_color"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/title_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/prod_title_title"
            android:minWidth="200dp"
            android:textColor="@color/subtext_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"></LinearLayout>

        <EditText
            android:id="@+id/price_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/prod_price_title"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            android:textColor="@color/subtext_color"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_weight="0"
        android:text="@string/prod_description_title"
        android:textColor="@color/title_color"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/description_input"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/default_border"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/description_prompt"
        android:inputType="textPostalAddress"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:textAlignment="viewStart"
        android:textColor="@color/subtext_color"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="5dp">

        <TextView
            android:id="@+id/category_label_create_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="0"
            android:text="@string/prod_category_title"
            android:textAlignment="textEnd"
            android:textColor="@color/title_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/category_input"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_weight="0" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/publish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/default_border"
        android:drawableStart="@drawable/upload_cloud"
        android:drawablePadding="5dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        android:text="@string/publish_button"
        android:textAllCaps="false"
        android:textSize="24sp" />
</LinearLayout>