<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:orientation="vertical"
                android:paddingStart="30dp"
                android:paddingEnd="30dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/register_title"
                    android:textAlignment="textStart"
                    android:textColor="@color/title_color"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/username_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/username_label"
                    android:textColor="@color/title_color" />

                <EditText
                    android:id="@+id/username_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/white"
                    android:drawableStart="@drawable/terminal"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/white"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/email_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/email_label"
                    android:textColor="@color/title_color" />

                <EditText
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/white"
                    android:drawableStart="@drawable/mail"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/white"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/password_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/password_label"
                    android:textColor="@color/title_color" />

                <EditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/white"
                    android:drawableStart="@drawable/key"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/white"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/confirm_password_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/confirm_password_label"
                    android:textColor="@color/title_color" />

                <EditText
                    android:id="@+id/confirm_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/white"
                    android:drawableStart="@drawable/key"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/white"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/register_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/default_border"
                    android:backgroundTint="@color/bg2"
                    android:drawableEnd="@drawable/arrow_right"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/white"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:text="@string/register_button"
                    android:textAllCaps="false"
                    android:textColor="@color/title_color"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom|center_horizontal"
                android:minHeight="200dp"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/already_registered_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/already_registered_label"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/login_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:text="@string/login_prompt"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/loading_popup"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="40dp"
        android:animateLayoutChanges="false"
        android:background="@drawable/default_border"
        android:backgroundTint="@color/bg4"
        android:elevation="20dp"
        android:gravity="center"
        android:minWidth="200dp"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:visibility="visible">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="#000A2647"
            android:backgroundTint="#00FFFFFF"
            android:scaleType="fitCenter"
            android:src="@drawable/loading_animation"
            app:tint="#ECCB54" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/loading"
            android:textColor="@color/bg3"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"></LinearLayout>

        <ImageView
            android:id="@+id/close_loading_popup"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/x"
            app:tint="@color/white" />
    </LinearLayout>
</FrameLayout>
