<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.fragments.ProfileFragment">


        <LinearLayout
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/default_button_background"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                app:srcCompat="@drawable/user"
                app:strokeColor="@color/black"
                app:strokeWidth="0.1dp" />

            <TextView
                android:id="@+id/profile_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/profile_option"
                android:textColor="@color/title_color"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/messages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/default_button_background"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                app:contentPadding="5dp"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                app:srcCompat="@drawable/message_square"
                app:strokeColor="@color/black"
                app:strokeWidth="0.1dp" />

            <TextView
                android:id="@+id/messages_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/messages_option"
                android:textColor="@color/title_color"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/default_button_background"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                app:contentPadding="5dp"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                app:srcCompat="@drawable/log_out"
                app:strokeColor="@color/black"
                app:strokeWidth="0.1dp" />

            <TextView
                android:id="@+id/logout_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/logout_option"
                android:textColor="@color/title_color"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/heavier_button_background"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                app:contentPadding="5dp"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                app:srcCompat="@drawable/trash_2"
                app:strokeColor="@color/black"
                app:strokeWidth="0.1dp" />

            <TextView
                android:id="@+id/delete_account_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/delete_account_option"
                android:textColor="@color/title_color"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>